--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -53,6 +53,7 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="AutomaticMessageValidator.T1.cs" />
+    <Compile Include="BasicMessage.T1.cs" />
     <Compile Include="BusinessRuleViolationException.cs" />
     <Compile Include="Client\AsyncExecutionTask.T1.cs" />
     <Compile Include="Client\AsyncObject.cs" />
@@ -70,9 +71,11 @@
     <Compile Include="Client\RequestMessage.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageValidator.T1.cs" />
+    <Compile Include="Server\IQuery.T1.cs" />
     <Compile Include="IRequestMessageViewModel.cs" />
     <Compile Include="IRequestMessageViewModel.T1.cs" />
     <Compile Include="ManualMessageValidator.T1.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Message.T1.cs" />
     <Compile Include="MessageDeniedException.cs" />
     <Compile Include="AttachedCollection.T1.cs" />
@@ -81,39 +84,47 @@
     <Compile Include="RequestMessageViewModelEditScope.cs" />
     <Compile Include="Server\Caching\CacheExpiredEventArgs.cs" />
     <Compile Include="Server\DependencyAttribute.cs" />
+    <Compile Include="Server\IMessageHandler.cs" />
+    <Compile Include="Server\IMessageHandlerModule.cs" />
+    <Compile Include="Server\IQueryModule.cs" />
+    <Compile Include="Server\MessageHandler.cs" />
     <Compile Include="Server\MessageHandler.T1.cs" />
+    <Compile Include="Server\MessageHandlerModule.cs" />
+    <Compile Include="Server\MessageHandlerPipeline.cs" />
+    <Compile Include="Server\MessageHandlerWrapper.T1.cs" />
+    <Compile Include="Server\MessageProcessorPipeline.T1.cs" />
     <Compile Include="Server\MessageSources.cs" />
     <Compile Include="Server\Caching\AspNetApplicationCacheManager.cs" />
-    <Compile Include="Server\Caching\AspNetCacheProvider.cs" />
+    <Compile Include="Server\Caching\AspNetCacheModule.cs" />
     <Compile Include="Server\Caching\AspNetCacheManager.cs" />
     <Compile Include="Server\Caching\AspNetSessionCacheManager.cs" />
     <Compile Include="Server\Caching\CacheEntryDeletedEventArgs.cs" />
     <Compile Include="Server\Caching\CacheEntryInsertedOrUpdatedEventArgs.cs" />
     <Compile Include="Server\Caching\CacheEntry.cs" />
     <Compile Include="Server\Caching\IQueryCacheManagerFactory.cs" />
-    <Compile Include="Server\Caching\IQueryCacheProvider.cs" />
-    <Compile Include="Server\Caching\MemoryCacheProvider.cs" />
-    <Compile Include="Server\MessageDispatcherModule.T1.cs" />
-    <Compile Include="MessageAttribute.cs" />
-    <Compile Include="Server\MessageHandlerModule.T2.cs" />
+    <Compile Include="Server\Caching\IQueryCacheModule.cs" />
+    <Compile Include="Server\Caching\MemoryCacheModule.cs" />
+    <Compile Include="Server\MessageHandlerDispatcher.T1.cs" />
     <Compile Include="Server\MessageHandlerModule.T1.cs" />
     <Compile Include="Server\Caching\ObjectCacheEntry.cs" />
     <Compile Include="Server\Caching\ObjectCacheManager.cs" />
-    <Compile Include="Server\Caching\ObjectCacheProvider.cs" />
+    <Compile Include="Server\Caching\ObjectCacheModule.cs" />
     <Compile Include="Server\Caching\ObjectCacheEntryMonitor.cs" />
     <Compile Include="Server\Caching\QueryCacheKind.cs" />
     <Compile Include="Server\Caching\QueryCacheManagerFactory.cs" />
-    <Compile Include="Server\Caching\QueryCacheProvider.cs" />
+    <Compile Include="Server\Caching\QueryCacheModule.cs" />
     <Compile Include="Server\Caching\QueryCacheManager.cs" />
     <Compile Include="Server\Caching\QueryCacheOptionsAttribute.cs" />
-    <Compile Include="Server\Caching\QueryCacheModule.T2.cs" />
+    <Compile Include="Server\Query.T1.cs" />
     <Compile Include="Server\QueryDispatcherModule.T1.cs" />
-    <Compile Include="Server\QueryModule.T2.cs" />
-    <Compile Include="Server\QueryModule.T3.cs" />
-    <Compile Include="Server\Caching\QueryCachePolicy.cs" />
+    <Compile Include="Server\QueryModule.cs" />
+    <Compile Include="Server\QueryModule.T1.cs" />
+    <Compile Include="Server\QueryPipeline.cs" />
+    <Compile Include="Server\QueryWrapper.T2.cs" />
+    <Compile Include="Server\Security\AuthorizationModule.cs" />
     <Compile Include="Server\TransactionScopeAttribute.cs" />
     <Compile Include="Server\TransactionScopeFactory.cs" />
-    <Compile Include="Server\TransactionScopeModule.T1.cs" />
+    <Compile Include="Server\TransactionScopeModule.cs" />
     <Compile Include="Server\Query.T2.cs" />
     <Compile Include="Server\QueryExecutionOptions.cs" />
     <Compile Include="ValidationErrorTree.cs" />
@@ -152,17 +163,11 @@
     <Compile Include="Server\FuncDecorator.T2.cs" />
     <Compile Include="Server\Domain\IAggregateVersion.T1.cs" />
     <Compile Include="Server\Domain\DateTimeVersion.cs" />
-    <Compile Include="Server\IMessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\IMessageProcessorBusConnection.cs" />
     <Compile Include="Server\Domain\Int64Version.cs" />
     <Compile Include="Server\IQuery.T2.cs" />
-    <Compile Include="Server\IQueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\MessageHandlerPipelineFactory.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineFactoryDecorator.T1.cs" />
     <Compile Include="Server\PassThroughPipeline.T1.cs" />
-    <Compile Include="Server\MessageValidationModule.T1.cs" />
-    <Compile Include="Server\QueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\QueryPipelineFactoryDecorator.T2.cs" />
+    <Compile Include="Server\MessageValidationModule.cs" />
     <Compile Include="Server\Domain\Repository.T3.cs" />
     <Compile Include="Server\Domain\Int32Version.cs" />
     <Compile Include="Server\Domain\DomainException.cs" />
