--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -69,14 +69,19 @@
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
     <Compile Include="Client\RequestMessage.cs" />
-    <Compile Include="DisposeLock.cs" />
-    <Compile Include="DisposeLockActiveState.cs" />
-    <Compile Include="DisposeLockDisposedState.cs" />
-    <Compile Include="DisposeLockDisposingState.cs" />
-    <Compile Include="DisposeLockState.cs" />
-    <Compile Include="IDisposeLock.cs" />
+    <Compile Include="InstanceLock.cs" />
+    <Compile Include="InstanceLockNotStartedState.cs" />
+    <Compile Include="InstanceLockStartedState.cs" />
+    <Compile Include="InstanceLockDisposedState.cs" />
+    <Compile Include="InstanceLockDisposingState.cs" />
+    <Compile Include="InstanceLockState.cs" />
+    <Compile Include="IInstanceLock.cs" />
     <Compile Include="IMessage.cs" />
+    <Compile Include="Server\IMessageProcessorPipeline.cs" />
+    <Compile Include="Server\IMessageToStrategyMapping.T1.cs" />
     <Compile Include="IMessageValidator.T1.cs" />
+    <Compile Include="Server\Caching\IQueryCacheStrategy.cs" />
+    <Compile Include="Server\Caching\QueryCacheStrategy.cs" />
     <Compile Include="Server\IQuery.T1.cs" />
     <Compile Include="IRequestMessageViewModel.cs" />
     <Compile Include="IRequestMessageViewModel.T1.cs" />
@@ -91,11 +96,10 @@
     <Compile Include="Server\Caching\CacheExpiredEventArgs.cs" />
     <Compile Include="Server\DependencyAttribute.cs" />
     <Compile Include="Server\IMessageHandler.cs" />
-    <Compile Include="Server\IMessageHandlerModule.cs" />
-    <Compile Include="Server\IQueryModule.cs" />
     <Compile Include="Server\MessageHandler.cs" />
     <Compile Include="Server\MessageHandler.T1.cs" />
     <Compile Include="Server\MessageHandlerModule.cs" />
+    <Compile Include="Server\MessageHandlerModule.T1.cs" />
     <Compile Include="Server\MessageHandlerPipeline.cs" />
     <Compile Include="Server\MessageHandlerWrapper.T1.cs" />
     <Compile Include="Server\MessageProcessorPipeline.T1.cs" />
@@ -111,7 +115,6 @@
     <Compile Include="Server\Caching\IQueryCacheModule.cs" />
     <Compile Include="Server\Caching\MemoryCacheModule.cs" />
     <Compile Include="Server\MessageHandlerDispatcher.T1.cs" />
-    <Compile Include="Server\MessageHandlerModule.T1.cs" />
     <Compile Include="Server\Caching\ObjectCacheEntry.cs" />
     <Compile Include="Server\Caching\ObjectCacheManager.cs" />
     <Compile Include="Server\Caching\ObjectCacheModule.cs" />
@@ -121,6 +124,7 @@
     <Compile Include="Server\Caching\QueryCacheModule.cs" />
     <Compile Include="Server\Caching\QueryCacheManager.cs" />
     <Compile Include="Server\Caching\QueryCacheOptionsAttribute.cs" />
+    <Compile Include="Server\MessageToStrategyMapping.T1.cs" />
     <Compile Include="Server\Query.T1.cs" />
     <Compile Include="Server\QueryDispatcherModule.T1.cs" />
     <Compile Include="Server\QueryModule.cs" />
@@ -128,9 +132,10 @@
     <Compile Include="Server\QueryPipeline.cs" />
     <Compile Include="Server\QueryWrapper.T2.cs" />
     <Compile Include="Server\Security\AuthorizationModule.cs" />
-    <Compile Include="Server\TransactionScopeAttribute.cs" />
-    <Compile Include="Server\TransactionScopeFactory.cs" />
-    <Compile Include="Server\TransactionScopeModule.cs" />
+    <Compile Include="Server\Transactions\ITransactionScopeFactory.cs" />
+    <Compile Include="Server\Transactions\TransactionScopeAttribute.cs" />
+    <Compile Include="Server\Transactions\TransactionScopeFactory.cs" />
+    <Compile Include="Server\Transactions\TransactionScopeModule.cs" />
     <Compile Include="Server\Query.T2.cs" />
     <Compile Include="Server\QueryExecutionOptions.cs" />
     <Compile Include="ValidationErrorTree.cs" />
