--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -52,9 +52,8 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
-    <Compile Include="AutomaticMessageValidator.T1.cs" />
-    <Compile Include="AutomaticValidationStrategy.T1.cs" />
-    <Compile Include="BasicMessage.T1.cs" />
+    <Compile Include="AutomaticMessageValidator.cs" />
+    <Compile Include="ValueMessage.T1.cs" />
     <Compile Include="BusinessRuleViolationException.cs" />
     <Compile Include="Client\AsyncExecutionTask.T1.cs" />
     <Compile Include="Client\AsyncObject.cs" />
@@ -70,7 +69,7 @@
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
     <Compile Include="Client\RequestMessage.cs" />
-    <Compile Include="IMessageValidationStrategy.cs" />
+    <Compile Include="IMessageValidator.cs" />
     <Compile Include="InstanceLock.cs" />
     <Compile Include="InstanceLockNotStartedState.cs" />
     <Compile Include="InstanceLockStartedState.cs" />
@@ -79,16 +78,14 @@
     <Compile Include="InstanceLockState.cs" />
     <Compile Include="IInstanceLock.cs" />
     <Compile Include="IMessage.cs" />
-    <Compile Include="ManualValidationStrategy.T1.cs" />
+    <Compile Include="ManualMessageValidator.cs" />
     <Compile Include="Server\IMessageProcessorPipeline.cs" />
     <Compile Include="Server\IMessageToStrategyMapping.T1.cs" />
-    <Compile Include="IMessageValidator.T1.cs" />
     <Compile Include="Server\Caching\IQueryCacheStrategy.cs" />
     <Compile Include="Server\Caching\QueryCacheStrategy.cs" />
     <Compile Include="Server\IQuery.T1.cs" />
     <Compile Include="IRequestMessageViewModel.cs" />
     <Compile Include="IRequestMessageViewModel.T1.cs" />
-    <Compile Include="ManualMessageValidator.T1.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Message.T1.cs" />
     <Compile Include="MessageDeniedException.cs" />
