--- a/Messaging.Tests/04.Messaging.Tests.csproj
+++ b/Messaging.Tests/04.Messaging.Tests.csproj
@@ -77,6 +77,14 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="CommandStub.cs" />
+    <Compile Include="FluentValidation\ComparerStub.T1.cs" />
+    <Compile Include="FluentValidation\EqualityComparerStub.T1.cs" />
+    <Compile Include="FluentValidation\NullableMemberTest.cs" />
+    <Compile Include="FluentValidation\RangeTest.cs" />
+    <Compile Include="FluentValidation\StringMemberTest.cs" />
+    <Compile Include="FluentValidation\ObjectMemberTest.cs" />
+    <Compile Include="FluentValidation\ValidatedMessage.T1.cs" />
+    <Compile Include="FluentValidation\ValidationErrorTreeExtensions.cs" />
     <Compile Include="InstanceLockTest.cs" />
     <Compile Include="InvalidMessageExceptionTest.cs" />
     <Compile Include="MessageStub.cs" />
