--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Messaging.Client.DataVirtualizationDemo\packages.config" />
   <repository path="..\Messaging.Client.WpfApplication\packages.config" />
   <repository path="..\Messaging.TestEngine.Tests\packages.config" />
   <repository path="..\Messaging.Tests\packages.config" />
