- Refactored the FluentValidator et al. to support both eager and lazy validation.

--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -56,20 +56,19 @@
     <Compile Include="FluentValidation\Comparable.T1.cs" />
     <Compile Include="FluentValidation\Comparer.cs" />
     <Compile Include="FluentValidation\Constraint.T1.cs" />
+    <Compile Include="FluentValidation\MemberSet.cs" />
     <Compile Include="FluentValidation\Equatable.T1.cs" />
     <Compile Include="FluentValidation\ErrorMessage.cs" />
     <Compile Include="FluentValidation\Constraint.cs" />
     <Compile Include="FluentValidation\IErrorMessageConsumer.cs" />
     <Compile Include="FluentValidation\IErrorMessageProducer.cs" />
     <Compile Include="FluentValidation\IMember.cs" />
-    <Compile Include="FluentValidation\IMemberParent.cs" />
     <Compile Include="FluentValidation\InternalRange.T1.cs" />
     <Compile Include="FluentValidation\IRange.T1.cs" />
     <Compile Include="FluentValidation\NullableMember.T1.cs" />
     <Compile Include="FluentValidation\NullConstraint.cs" />
     <Compile Include="FluentValidation\Range.T1.cs" />
     <Compile Include="FluentValidation\RangeOptions.cs" />
-    <Compile Include="FluentValidation\ValidationErrorConsumer.cs" />
     <Compile Include="FluentValidation\StringMemberExtensions.cs" />
     <Compile Include="FluentValidation\Member.T1.cs" />
     <Compile Include="MessageValidator.cs" />
