--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FluentValidation\Comparer.cs" />
     <Compile Include="FluentValidation\Constraint.T1.cs" />
     <Compile Include="FluentValidation\EnumerableMemberExtensions.cs" />
+    <Compile Include="FluentValidation\GuidMemberExtensions.cs" />
     <Compile Include="FluentValidation\MemberSet.cs" />
     <Compile Include="FluentValidation\Equatable.T1.cs" />
     <Compile Include="FluentValidation\ErrorMessage.cs" />
