- Reduced the number of constraint overloads again by using optional parameters and default error messages. - Added the IsByte-constraint for string members.

--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -73,6 +73,7 @@
     <Compile Include="FluentValidation\RangeOptions.cs" />
     <Compile Include="FluentValidation\StringMemberExtensions.cs" />
     <Compile Include="FluentValidation\Member.T1.cs" />
+    <Compile Include="FluentValidation\StringToNumberConverter.T1.cs" />
     <Compile Include="MessageValidator.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
       <AutoGen>True</AutoGen>
