- Added some extra constraints for collection-types.

--- a/Messaging.Tests/04.Messaging.Tests.csproj
+++ b/Messaging.Tests/04.Messaging.Tests.csproj
@@ -77,9 +77,12 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="CommandStub.cs" />
+    <Compile Include="FluentValidation\CollectionMemberTest.cs" />
     <Compile Include="FluentValidation\ComparerStub.T1.cs" />
+    <Compile Include="FluentValidation\EnumerableMemberTest.cs" />
     <Compile Include="FluentValidation\EqualityComparerStub.T1.cs" />
     <Compile Include="FluentValidation\GuidMemberTest.cs" />
+    <Compile Include="FluentValidation\ListMemberTest.cs" />
     <Compile Include="FluentValidation\NullableMemberTest.cs" />
     <Compile Include="FluentValidation\RangeTest.cs" />
     <Compile Include="FluentValidation\StringMemberTest.cs" />
