--- a/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
+++ b/Messaging.TestEngine.Tests/01.Messaging.TestEngine.Tests.csproj
@@ -97,6 +97,7 @@
     <None Include="packages.config" />
     <None Include="Properties\packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
