--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ChessApplication.ApplicationLayer.UnitTests\packages.config" />
+  <repository path="..\ChessApplication.InterfaceLayer.IntegrationTests\packages.config" />
+  <repository path="..\ChessApplication.InterfaceLayer\packages.config" />
   <repository path="..\Messaging.Client.DataVirtualizationDemo\packages.config" />
   <repository path="..\Messaging.Client.WpfApplication\packages.config" />
   <repository path="..\Messaging.TestEngine.Tests\packages.config" />
